tests/parser/shell_escape/test_01.m.octave.out
In test_01.m, line 4
|   !echo foo bar
|         ^^^ error: expected end of statement, found IDENTIFIER instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
