tests/parser/shell_escape/test_01.m
% (c) Copyright 2019 Florian Schanda

function test_01()
  !echo foo bar
end
